2004-01-21  mput <root@mput.dip.jp>

	* doc/ja_JP.ujis/timidity.cfg.5: sorry, I was confusing. revert.
	* doc/C/timidity.cfg.5: fix typo

2004-01-21  mput <root@mput.dip.jp>

	* doc/ja_JP.ujis/timidity.cfg.5 :
	  Was written in eucJP, convert to iso-2022-jp
	* doc/C/timidity.cfg.5 : Bug fix.

2004-01-21  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5:
	  Update man page of timidity.cfg.5

2004-01-21  Kentaro Sato <kentaro@ranvis.com>

	* timidity/aiff_a.c, common.c, mac_a.c, mac_main.c, mac_qt_a.c,
	  mac_soundspec.c, mac_util.c, recache.c, wrd_read.c,
	  interface/mac_c.c, mac_mag.c, mac_wrdwindow.c, wrdt_mac.c,
	  libarc/arc_mime.c:
	  Updated Mac interface to compile.

2004-01-20  Kentaro Sato <kentaro@ranvis.com>

	* interface/dumb_c.c, timidity/playmidi.c, sndfont.c:
	  Added playnote calculation for cfgforsf (finished).

2004-01-20  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix around NRPN vibrato.

2004-01-18  mput <root@mput.dip.jp>

	* timidity/playmidi.c (calc_random_delay): tiny bug fix

2004-01-18  Saito <saito2@digitalme.com>

	* timidity/readmidi.c:
	  Fix aborting.

2004-01-17  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix sostenuto and redamper.

2004-01-16  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix SysEx.
	* timidity/reverb.[ch], timidity/effect.c, timidity/mt19937ar.h,
	  timidity/playmidi.[ch], timidity/instrum.h, timidity/timidity.c:
	  Implement pink noise generator.
	  Support for #extension rnddelay [ms].

2004-01-15  Kentaro Sato <kentaro@ranvis.com>

	* timidity/common.[ch], sndfont.c, timidity.c:
	  Changed #extension ...send, playnote option's argument format.

2004-01-15  Saito <saito2@digitalme.com>

	* timidity/timidity.c, timidity/playmidi.[ch], timidity/instrum.h,
	  timidity/mix.c, timidity/readmidi.c:
	  Support for redamper effect (#extension redamper).
	  Support for Sostenuto and Hold1 Half Pedal.
